# timtracker2

./: .cursorrules  .gitignore  .npmrc  README.md  package-lock.json  package.json  vercel.json
apps/api/: .gitignore  middleware.ts  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/api/app/: layout.tsx  page.tsx
apps/api/gpt/: chatgpt.PROMPT  openapi.yaml
apps/api/lib/: aggregation.ts  auth.ts  cache.ts  db.ts  sleepCalculation.ts  types.ts
apps/api/migrations/: 001_create_ios_health_tables.sql  002_fix_workout_types.sql
apps/api/scripts/: check-db.mjs  migrate.mjs
apps/expo/: .gitignore  README.md  app.json  credentials.json  eas.json  metro.config.js  package.json  tsconfig.json  vercel.json
apps/expo/app/: _layout.tsx  index.tsx  oauth-callback.tsx  sign-in.tsx
apps/expo/app/(drawer)/: _layout.tsx  index.tsx  logs.tsx  settings.tsx
apps/expo/app/(tabs)/: _layout.tsx  charts.tsx  health-metrics.tsx  index.tsx  settings.tsx
apps/expo/components/: DrawerContent.tsx
apps/expo/components/charts/: CalendarHeatmap.tsx  ChartCard.tsx  EChart.d.ts  (+11 more)
apps/expo/lib/: api.ts  backgroundSync.ts  dataCache.ts  logger.ts  syncService.ts  theme.ts  tokenCache.ts
apps/web/: README.md  middleware.ts  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: db.ts
docs/: .cursorrules  ARCHITECTURE.md
docs/PRDs/: 0001-initial-clerk-setup.md  0002-launch-iOS-app.md  0003-charts-migration.md  0004-ios-healthkit-direct-ingest.md  README.md  TEMPLATE.md
scripts/: .gitignore  README.md  migrate_from_gcp.py  pyproject.toml
(+39 files in other folders)
